Edit patient record add and edit pages

--- a/AUF.EMR.MVC/Views/HouseHoldMember/Create.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Create.cshtml
@@ -19,45 +19,45 @@
                                 <h6 class="text-md font-bold text-gray-800">Household Member Personal Information</h6>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="HouseholdMember.FirstName" class="block mb-2 text-sm font-medium text-gray-700"></label>
+                                <label asp-for="HouseholdMember.FirstName" class="block mb-2 text-sm font-medium text-gray-700">First Name</label>
                                 <input asp-for="HouseholdMember.FirstName" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                                 <span asp-validation-for="HouseholdMember.FirstName" class="block mb-2 text-sm text-red-700"></span>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="HouseholdMember.MotherMaidenName" class="block mb-2 text-sm font-medium text-gray-700"></label>
+                                <label asp-for="HouseholdMember.MotherMaidenName" class="block mb-2 text-sm font-medium text-gray-700">Mother's Maiden Name</label>
                                 <input asp-for="HouseholdMember.MotherMaidenName" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                                 <span asp-validation-for="HouseholdMember.MotherMaidenName" class="block mb-2 text-sm text-red-700"></span>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="HouseholdMember.LastName" class="block mb-2 text-sm font-medium text-gray-700"></label>
+                                <label asp-for="HouseholdMember.LastName" class="block mb-2 text-sm font-medium text-gray-700">Last Name</label>
                                 <input asp-for="HouseholdMember.LastName" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                                 <span asp-validation-for="HouseholdMember.LastName" class="block mb-2 text-sm text-red-700"></span>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="HouseholdMember.Sex" class="block mb-2 text-sm font-medium text-gray-700"></label>
+                                <label asp-for="HouseholdMember.Sex" class="block mb-2 text-sm font-medium text-gray-700">Sex</label>
                                 <input asp-for="HouseholdMember.Sex" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                                 <span asp-validation-for="HouseholdMember.Sex" class="block mb-2 text-sm text-red-700"></span>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="HouseholdMember.Age" class="block mb-2 text-sm font-medium text-gray-700"></label>
+                                <label asp-for="HouseholdMember.Age" class="block mb-2 text-sm font-medium text-gray-700">Age</label>
                                 <input asp-for="HouseholdMember.Age" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                                 <span asp-validation-for="HouseholdMember.Age" class="block mb-2 text-sm text-red-700"></span>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="HouseholdMember.Birthday" class="block mb-2 text-sm font-medium text-gray-700"></label>
+                                <label asp-for="HouseholdMember.Birthday" class="block mb-2 text-sm font-medium text-gray-700">Date of Birth</label>
                                 <input asp-for="HouseholdMember.Birthday" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                                 <span asp-validation-for="HouseholdMember.Birthday" class="block mb-2 text-sm text-red-700"></span>
                             </div>
                             <div class="mb-2 mt-8">
-                                <h6 class="text-md font-bold text-gray-800">Relationship to Household Head</h6>
+                                <h6 class="text-md font-bold text-gray-800">Relationship</h6>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm font-medium text-gray-700"></label>
+                                <label asp-for="HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm font-medium text-gray-700">Relationship to Household Head</label>
                                 <input asp-for="HouseholdMember.RelationshipToHouseholdHead" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                                 <span asp-validation-for="HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm text-red-700"></span>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="HouseholdMember.OtherRelation" class="block mb-2 text-sm font-medium text-gray-700"></label>
+                                <label asp-for="HouseholdMember.OtherRelation" class="block mb-2 text-sm font-medium text-gray-700">Other Relation</label>
                                 <input asp-for="HouseholdMember.OtherRelation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                                 <span asp-validation-for="HouseholdMember.OtherRelation" class="block mb-2 text-sm text-red-700"></span>
                             </div>
@@ -68,30 +68,30 @@
                                 <h6 class="text-md font-bold text-gray-800">Quarterly Visit</h6>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="HouseholdMember.FirstQtrClassification" class="block mb-2 text-sm font-medium text-gray-700"></label>
+                                <label asp-for="HouseholdMember.FirstQtrClassification" class="block mb-2 text-sm font-medium text-gray-700">First Quarter Visir</label>
                                 <input asp-for="HouseholdMember.FirstQtrClassification" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                                 <span asp-validation-for="HouseholdMember.FirstQtrClassification" class="block mb-2 text-sm text-red-700"></span>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="HouseholdMember.SecondQtrClassification" class="block mb-2 text-sm font-medium text-gray-700"></label>
+                                <label asp-for="HouseholdMember.SecondQtrClassification" class="block mb-2 text-sm font-medium text-gray-700">Second Quarter Visit</label>
                                 <input asp-for="HouseholdMember.SecondQtrClassification" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                                 <span asp-validation-for="HouseholdMember.SecondQtrClassification" class="block mb-2 text-sm text-red-700"></span>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="HouseholdMember.ThirdQtrClassification" class="block mb-2 text-sm font-medium text-gray-700"></label>
+                                <label asp-for="HouseholdMember.ThirdQtrClassification" class="block mb-2 text-sm font-medium text-gray-700">Third Quarter Visit</label>
                                 <input asp-for="HouseholdMember.ThirdQtrClassification" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                                 <span asp-validation-for="HouseholdMember.ThirdQtrClassification" class="block mb-2 text-sm text-red-700"></span>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="HouseholdMember.FourthQtrClassification" class="block mb-2 text-sm font-medium text-gray-700"></label>
+                                <label asp-for="HouseholdMember.FourthQtrClassification" class="block mb-2 text-sm font-medium text-gray-700">Fourth Quarter Visit</label>
                                 <input asp-for="HouseholdMember.FourthQtrClassification" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                                 <span asp-validation-for="HouseholdMember.FourthQtrClassification" class="block mb-2 text-sm text-red-700"></span>
                             </div>
                             <div class="mb-2 mt-8">
-                                <h6 class="text-md font-bold text-gray-800">Remarks</h6>
+                                <h6 class="text-md font-bold text-gray-800">Others</h6>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="HouseholdMember.Remarks" class="block mb-2 text-sm font-medium text-gray-700"></label>
+                                <label asp-for="HouseholdMember.Remarks" class="block mb-2 text-sm font-medium text-gray-700">Remarks</label>
                                 <input asp-for="HouseholdMember.Remarks" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                                 <span asp-validation-for="HouseholdMember.Remarks" class="block mb-2 text-sm text-red-700"></span>
                             </div>
