--- a/AUF.EMR.MVC/Views/PregnancyRecord/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyRecord/Edit.cshtml
@@ -1,67 +1,71 @@
 ﻿@model EditPregnancyRecordVM
 
 @{
+    Layout = "Layouts/_HouseholdLayout";
+    Layout = "Layouts/_FormLayout";
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>PregnancyRecord</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container mx-auto px-4 py-8">
+    <div class="bg-white shadow-md rounded-lg p-8 mb-8">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
             <input type="hidden" asp-for="PregnancyRecord.Id" value="@Model.PregnancyRecord.Id" />
             <input type="hidden" asp-for="PregnancyRecord.PatientId" value="@Model.PregnancyRecord.PatientId" />
-            <div class="form-group">
-                <label asp-for="PregnancyRecord.PatientId" class="control-label"></label>
-                <select asp-for="PregnancyRecord.PatientId" class="form-control" asp-items="@(new SelectList(Model.Women, nameof(HouseholdMember.Id), nameof(HouseholdMember.FormattedFullName)))"></select>
+            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Edit Pregnancy Record</h1>
+            <hr class="mb-4">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+                <div>
+                    <div class="mb-4">
+                        <label asp-for="PregnancyRecord.PatientId" class="block mb-2 text-sm font-medium text-gray-700">Patient ID</label>
+                        <select asp-for="PregnancyRecord.PatientId" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" asp-items="@(new SelectList(Model.Women, nameof(HouseholdMember.Id), nameof(HouseholdMember.FormattedFullName)))"></select>
+                    </div>
+                    <div class="mb-4">
+                        <label asp-for="PregnancyRecord.Age" class="block mb-2 text-sm font-medium text-gray-700">Age</label>
+                        <input asp-for="PregnancyRecord.Age" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <span asp-validation-for="PregnancyRecord.Age" class="block mb-2 text-sm text-red-700"></span>
+                    </div>
+                    <div class="mb-4">
+                        <label asp-for="PregnancyRecord.Husband" class="block mb-2 text-sm font-medium text-gray-700">Husband</label>
+                        <input asp-for="PregnancyRecord.Husband" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <span asp-validation-for="PregnancyRecord.Husband" class="block mb-2 text-sm text-red-700"></span>
+                    </div>
+                    <div class="mb-4">
+                        <label asp-for="PregnancyRecord.CellphoneNumber" class="block mb-2 text-sm font-medium text-gray-700">Contact No.</label>
+                        <input asp-for="PregnancyRecord.CellphoneNumber" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <span asp-validation-for="PregnancyRecord.CellphoneNumber" class="block mb-2 text-sm text-red-700"></span>
+                    </div>
+                </div>
+                <div>
+                    <div class="mb-4">
+                        <label asp-for="PregnancyRecord.Gravida" class="block mb-2 text-sm font-medium text-gray-700">Gravida</label>
+                        <input asp-for="PregnancyRecord.Gravida" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <span asp-validation-for="PregnancyRecord.Gravida" class="block mb-2 text-sm text-red-700"></span>
+                    </div>
+                    <div class="mb-4">
+                        <label asp-for="PregnancyRecord.Para" class="block mb-2 text-sm font-medium text-gray-700">Para</label>
+                        <input asp-for="PregnancyRecord.Para" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <span asp-validation-for="PregnancyRecord.Para" class="block mb-2 text-sm text-red-700"></span>
+                    </div>
+                    <div class="mb-4">
+                        <label asp-for="PregnancyRecord.LMP" class="block mb-2 text-sm font-medium text-gray-700">LMP</label>
+                        <input asp-for="PregnancyRecord.LMP" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <span asp-validation-for="PregnancyRecord.LMP" class="block mb-2 text-sm text-red-700"></span>
+                    </div>
+                    <div class="mb-4">
+                        <label asp-for="PregnancyRecord.EDC" class="block mb-2 text-sm font-medium text-gray-700">EDC</label>
+                        <input asp-for="PregnancyRecord.EDC" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <span asp-validation-for="PregnancyRecord.EDC" class="block mb-2 text-sm text-red-700"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="PregnancyRecord.Age" class="control-label"></label>
-                <input asp-for="PregnancyRecord.Age" class="form-control" />
-                <span asp-validation-for="PregnancyRecord.Age" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PregnancyRecord.Husband" class="control-label"></label>
-                <input asp-for="PregnancyRecord.Husband" class="form-control" />
-                <span asp-validation-for="PregnancyRecord.Husband" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PregnancyRecord.Gravida" class="control-label"></label>
-                <input asp-for="PregnancyRecord.Gravida" class="form-control" />
-                <span asp-validation-for="PregnancyRecord.Gravida" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PregnancyRecord.Para" class="control-label"></label>
-                <input asp-for="PregnancyRecord.Para" class="form-control" />
-                <span asp-validation-for="PregnancyRecord.Para" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PregnancyRecord.LMP" class="control-label"></label>
-                <input asp-for="PregnancyRecord.LMP" class="form-control" />
-                <span asp-validation-for="PregnancyRecord.LMP" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PregnancyRecord.CellphoneNumber" class="control-label"></label>
-                <input asp-for="PregnancyRecord.CellphoneNumber" class="form-control" />
-                <span asp-validation-for="PregnancyRecord.CellphoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PregnancyRecord.EDC" class="control-label"></label>
-                <input asp-for="PregnancyRecord.EDC" class="form-control" />
-                <span asp-validation-for="PregnancyRecord.EDC" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="flex justify-end">
+                <a asp-action="Index" class="focus:outline-none text-white bg-red-400 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:bg-red-450 !important">Back</a>
+                <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Submit</button>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
