--- a/AUF.EMR.MVC/Views/WRA/Create.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Create.cshtml
@@ -1,26 +1,31 @@
 ﻿@model CreateWRAVM
 
 @{
+    Layout = "Layouts/_HouseholdLayout";
+    Layout = "Layouts/_FormLayout";
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>WomanOfReproductiveAge</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container mx-auto px-4 py-8">
+    <div class="bg-white shadow-md rounded-lg p-8 mb-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Add Woman of Reproductive Age</h1>
+            <hr class="mb-4">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+
+
+
+             </div>
             <div class="form-group">
-                <label asp-for="WRA.HouseholdMemberId" class="control-label"></label>
+                <label asp-for="WRA.HouseholdMemberId" class="control-label">Household Member ID</label>
                 <select asp-for="WRA.HouseholdMemberId" class="form-control" asp-items="@(new SelectList(Model.WomenInHousehold, nameof(HouseholdMember.Id), nameof(HouseholdMember.FormattedFullName)))"></select>
             </div>
             <div class="form-group">
                 <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
             </div>
             <div class="form-group">
-                <label asp-for="WRA.CivilStatus" class="control-label"></label>
+                <label asp-for="WRA.CivilStatus" class="control-label">Civil Status</label>
                 <input asp-for="WRA.CivilStatus" class="form-control" />
                 <span asp-validation-for="WRA.CivilStatus" class="text-danger"></span>
             </div>
