--- a/AUF.EMR.MVC/Views/PatientRecord/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Edit.cshtml
@@ -1,6 +1,8 @@
 ﻿@model EditPatientRecordVM
 
 @{
+    Layout = "Layouts/_HouseholdLayout";
+    Layout = "Layouts/_FormLayout";
     ViewData["Title"] = "Edit";
 }
 
