--- a/AUF.EMR.MVC/Views/Masterlist/Adult.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Adult.cshtml
@@ -1,6 +1,8 @@
 ﻿@model HouseholdMemberListVM
 
 @{
+    Layout = "Layouts/_HouseholdLayout";
+    Layout = "Layouts/_FormLayout";
     ViewData["Title"] = "Masterlist of Adults";
 }
 
