--- a/AUF.EMR.MVC/Views/PatientRecord/Index.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model PatientRecordVM
 
 @{
+    Layout = "Layouts/_HouseholdLayout";
+    Layout = "Layouts/_FormLayout";
     ViewData["Title"] = "Index";
 }
 
